javali_tests/A3/A4_keinestamSchmid/success/Positive.2.2.3.CIRCULAR_INHERITANCE.javali
// Rule 2.2.3: There is no circular inheritance (i.e., A extends B and B extends A).

class Main {
	void main() {
		int i;
	}
}

class A {
	void swap() {
		int j;
	}
}

class B extends A {
	void snap() {
		int k;
	}
}

