javali_tests/A3/A4_keinestamSchmid/fail/IncorrectBuiltInReadCall2.javali
// Rule 2.3.9: Tests that read cannot produce non-int type.
class Main {
	void main() {
		float r;
		r = read();
	}
}